<?xml version="1.0" encoding="UTF-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:text="@string/signup"
        android:gravity="center"
        android:fontFamily="@font/poppinsbold"
        android:id="@+id/textView"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/textInputLayoutNom"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:hint="@string/NomTextView"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_name"
            android:drawableRight="@drawable/ic_name"
            android:fontFamily="@font/poppinsmedium"
            tools:targetApi="jelly_bean" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/textInputLayoutPrenom"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNom"
        android:hint="@string/PrenomTextView"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:targetApi="jelly_bean"
        android:fontFamily="@font/poppinsmedium"
        android:id="@+id/PrenomEditText"
        android:drawableRight="@drawable/ic_name"
        android:drawableEnd="@drawable/ic_name"/>

</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPrenom"
        android:hint="@string/EmailTextView"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:targetApi="jelly_bean"
        android:fontFamily="@font/poppinsmedium"
        android:id="@+id/EmailEditText"
        android:drawableRight="@drawable/ic_email"
        android:drawableEnd="@drawable/ic_email"/>

</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        android:hint="@string/password"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        tools:layout_editor_absoluteX="0dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:targetApi="jelly_bean"
        android:fontFamily="@font/poppinsmedium"
        android:id="@+id/passwordEditText"
        android:drawableRight="@drawable/ic_pass"
        android:drawableEnd="@drawable/ic_pass"/>

</com.google.android.material.textfield.TextInputLayout>

    <ProgressBar android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/progress"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        android:visibility="gone"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="S'inscrire"
        android:id="@+id/Registerbtn"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        android:layout_marginTop="10dp"
        android:background="#0C2C7C"
        android:textColor="@color/white"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content" tools:targetApi="jelly_bean"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="se connecter ici"
        android:fontFamily="@font/poppinsmedium"
        android:id="@+id/loginText"
        app:layout_constraintTop_toBottomOf="@+id/Registerbtn"
        android:layout_marginTop="40dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
